fixed some styling to make pages look correct on mobile

--- a/src/style/contact.css
+++ b/src/style/contact.css
@@ -13,22 +13,24 @@ body{
     text-align: center;
 }
 .contentContainer h3{
-    margin-top: 15px;
+    margin-top: 24px;
     color: #819283;
     font-weight: 400;
+    font-size: 24px;
 }
 form{
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 25px;
 }
 form p{
     width: 160px;
 }
 textarea{
-    height: 150px;
-    width: 200px;
+    height: 180px;
+    width: 250px;
     margin: 10px -50px 0px -50px;
     border-color: #819283;
     background-color: #D9A17F;
@@ -40,10 +42,11 @@ textarea::placeholder{
     color:#fff3cb
 }
 #btn{
-    margin-top:0px;
+    margin-bottom: 92px;
 }
 button{
-    width: 80px;
+    width: 120px;
+    height: 25px;
     border-radius: 5px;
     color:#fff3cb;
     background: #819283;
@@ -54,11 +57,25 @@ button{
     border-left:none;
     border-color: #D9A17F;
     background: transparent;
-    color:#819283
+    color:#819283;
+    font-size: 16px;
+    font-weight: 200px;
 }
 #textInput::placeholder{
-    color:#819283
+    color:#819283;
+    font-size: 16px;
+    font-weight: 200;
 }
 .labelText{
+    font-size:16px;
     color: #D9A17F;
+}
+#radioBtns{
+    display:flex;
+    flex-direction:row;
+    margin-top:10px;
+    margin-left: -15px;
+}
+#radioBtns label{
+    margin-right: 5px;
 }
