--- a/src/style/galleryshow.css
+++ b/src/style/galleryshow.css
@@ -13,7 +13,7 @@ body{
     flex-direction: row;
     flex-wrap:wrap;
     justify-content: space-between;
-    gap: 25px 0px;
+    gap: 40px 0px;
     padding: 0 50px 0 50px;
     margin-bottom: 50px;
     margin-top: 50px;
